src/objects/ZZPhaseModel__c.object
<CustomObject>
    <fields>
        <fullName>Actions__c</fullName>
        <defaultValue>&quot;Kick Off,In Progress,&quot; + BR() + &quot;Complete,Completed,&quot; + BR() + &quot;Defer,Deferred,&quot; + BR() + &quot;Rerun,New,&quot;</defaultValue>
        <label>Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Check_Completed__c</fullName>
        <label>Check Completed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <label>Children</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default_Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Default Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Return_Values__c</fullName>
        <label>Get Return Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Function__c</fullName>
        <label>Kick Off Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kick_Off__c</fullName>
        <label>Kick Off</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parents__c</fullName>
        <label>Parents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_Actions__c</fullName>
        <defaultValue>&quot;Kick Off,In Progress,&quot; + BR() + &quot;Complete,Completed,&quot; + BR() + &quot;Defer,Deferred,&quot; + BR() + &quot;Rerun,New,&quot;</defaultValue>
        <label>Phase Actions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_Controller_Class__c</fullName>
        <label>Phase Controller Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Controller__c</fullName>
        <label>Phase Controller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_X__c</fullName>
        <label>Position X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position_Y__c</fullName>
        <label>Position Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Statuses__c</fullName>
        <defaultValue>&quot;New,In Progress,Completed,Deferred&quot;</defaultValue>
        <label>Statuses</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>ZZWorkflowModel__c</referenceTo>
        <relationshipLabel>ZZPhaseModels</relationshipLabel>
        <relationshipName>ZZPhaseModels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ZZPhaseModel</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZZPhaseModel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZPhaseModels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>